--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ install:
   - pip install molecule
   - pip install docker
 script:
-  - molecule --debug test
+  - molecule test
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
