--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,10 @@
 ---
 
 awx_repo_directory: "~/awx"
-awx_version: 2.1.2
+awx_version: 6.0.0
 awx_update_repo: true
 
 awx_vars:
   postgres_data_dir: /var/lib/postgresql/data
-  use_docker_compose: false
+  ansible_python_interpreter: /usr/bin/python3
+  docker_compose_dir: /var/lib/awxcompose
