--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -4,9 +4,14 @@
   become: true
   vars:
     git_config: []
+    pip_version: 3
     pip_install_packages:
-      - name: docker
       - name: ansible
+        version: '2.8.2'
+      - name: docker
+        version: '4.0.2'
+      - name: docker-compose
+        version: '1.24.1'
     nodejs_version: 8
     nodejs_install_packages: []
   pre_tasks:
