--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -3,6 +3,7 @@
   hosts: all
   become: true
   vars:
+    ansible_python_interpreter: /usr/bin/python3
     git_config: []
     pip_install_packages:
       - name: ansible
@@ -14,7 +15,7 @@
       - name: docker-compose
         version: '1.24.1'
         executable: pip3
-    nodejs_version: 8
+    nodejs_version: 10
     nodejs_install_packages: []
   pre_tasks:
     - name: Update apt cache.
