--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -1,6 +1,13 @@
 ---
 
-- src: calvinbui.ansible_git
 - src: calvinbui.ansible_pip
-- src: calvinbui.ansible_nodejs
+  version: '4.0.0'
+
 - src: calvinbui.ansible_docker
+  version: '2.0.0'
+
+- src: calvinbui.ansible_git
+  version: '1.1'
+
+- src: calvinbui.ansible_nodejs
+  version: '2.0.0'
