--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -2,6 +2,8 @@
 - name: Converge
   hosts: all
   become: true
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   pre_tasks:
     - name: Update apt cache
       apt:
